--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -252,6 +252,7 @@ footer {
 
 /* media querry */
 
+/* For larger to medium screen sizes from 1200px wide and down */
 @media screen and (max-width: 1200px) {
     #club-ethos {
         width: 65%;
@@ -274,6 +275,13 @@ footer {
         clear: both;
         width: 100%;
         float: left;
+        padding: 0;
+    }
+
+    #times > div {
+        width: 100%;
+        clear: both;
+        height: 150px;
         padding: 0;
     }
 
